@@ -28,6 +28,8 @@ Version 1.13.1+dev:
        visible.
    * Added a version dialog button to the title screen, replacing the Paths
      option previously found in Preferences -> General.
+ * WML engine:
+   * Added support for mod_x,mod_y= in [terrain_graphics].
  * Miscellaneous and bug fixes:
    * Fixed Generate Map dialog bug that caused last choice of map
      generator to not be actually selected (bug #23711).
